--- a/Part1.qmd
+++ b/Part1.qmd
@@ -2,148 +2,8 @@
 
 Microsoft Word is a powerful tool for creating professional documents such as reports, proposals, and presentations. With its wide range of formatting and design options, you can easily create documents that are visually appealing and easy to read. Word provides a variety of tools for formatting text, including styles, fonts, and spacing options, which can be customized to meet your specific needs. In addition, Word has a range of features for inserting images, graphs, and other visual elements into your document, allowing you to create visually appealing and engaging content. Another useful feature of Word is its spell-check and grammar-check functions, which help you to eliminate errors and ensure that your document is of the highest quality. With these powerful tools and features, you can use Microsoft Word to prepare professional documents that are both informative and visually impressive.
 
-# Word Processing and Processor
+## Word Processing and Processor
+
 Word processing is the process of writing, editing, and producing documents (e.g., letters, reports, books) through the use of a computer program. A word processorLinks to an external site. is an electronic device or a computer software application that performs word processing as directed by the user (that is you!). This includes composition, editing, and formatting. Microsoft Word (MS Word) is probably one of the most widely used word processors. However, many other word processing applications exist such as WordPerfect and OpenOffice.org Writer. MS Word provides font applications (style & size), spell and grammar checking, access to a thesaurus, the ability to combine text with tables, charts, and pictures.
 
 MS Word structures documents hierarchically. At the top is the Word application itself, used to create, edit, and print documents. At the next level, MS Word has documents (=Word files). The Word application can have multiple Word documents open at the same time. Documents are organized in sections, each section consists of paragraphs, and each paragraph contains characters. Documents also contain headers, footers, tables, pictures, and additional features such as line and page numbers.
-# Data to Analyze
-
-To answer the research question "Does obesity increase the risk of developing diabetes?" in the <mark>U.S. context</mark>, we do the following:
-
-## Choose a U.S. data source
-
-```{r fig.cap="", echo=FALSE, out.width="100%", out.height="auto"}
-knitr::include_graphics("images/nhanes.png")
-```
-
-::: column-margin
--   **Data source**: National Health and Nutrition Examination Survey ([NHANES](https://wwwn.cdc.gov/nchs/nhanes/)) [@nhanes]
-    -   [2013-2014](https://wwwn.cdc.gov/nchs/nhanes/continuousnhanes/default.aspx?BeginYear=2013),
-    -   [2015-2016](https://wwwn.cdc.gov/nchs/nhanes/continuousnhanes/default.aspx?BeginYear=2015),
-    -   [2017-2018](https://wwwn.cdc.gov/nchs/nhanes/continuousnhanes/default.aspx?BeginYear=2017)
--   **Availability**: NHANES is a <mark>publicly available</mark> dataset that can be downloaded for free from the CDC website.
--   **Design**: Observational cross-sectional data.
-:::
-
-## Confounder identification
-
-**Directed acyclic graph (DAG)**
-
-::: column-margin
-[@greenland1999causal]
-:::
-
-::: {style="text-align:center"}
-```{mermaid}
-flowchart TB
-  A[Obesity A] --> Y(Diabetes Y)
-  L[Confounders C] --> Y
-  L --> A
-```
-:::
-
-```{r fig.cap="Hypothesized Directed acyclic graph drawn based on analyst's best understanding of the literature", echo=FALSE, out.width="100%", out.height="auto"}
-knitr::include_graphics("images/DAGbdcomplete0.png")
-```
-
-::: column-margin
-**Exposure**: Being obese
-:::
-
-::: column-margin
-**Outcome**: Developing diabetes
-:::
-
-::: column-margin
-**Confounders**: Demographic and lab variables
-:::
-
-## Identify measured and unmeasured variables in the data
-
-Find variables capturing the following concepts in the data based on a hypothesized DAG.
-
-```{=html}
-<style>
-  table {
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  th, td {
-    padding: 8px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-  }
-
-  tr:nth-child(odd) {
-    background-color: #f2f2f2;
-  }
-
-  tr:nth-child(even) td:nth-child(1),
-  tr:nth-child(even) td:nth-child(2) {
-    background-color: #f2f2f2;
-  }
-  
-  th {
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-  }
-</style>
-```
-| Role       | Data Component                                                                                                                                                                                                                                                   | Variables considered based on DAG                                                                                                                             |
-|------------------|------------------|------------------------------------|
-| Outcome    | [DIQ](https://wwwn.cdc.gov/nchs/nhanes/2017-2018/DIQ_J.htm)                                                                                                                                                                                                      | *Have diabetes*[^data-1]                                                                                                                                      |
-| Exposure   | [BMX](https://wwwn.cdc.gov/nchs/nhanes/2017-2018/BMX_J.htm)                                                                                                                                                                                                      | *Obese*; [BMI \>= 30](https://www.cdc.gov/obesity/basics/adult-defining.html)                                                                                 |
-| Confounder | (*demographic*) [DEMO](https://wwwn.cdc.gov/nchs/nhanes/2017-2018/DEMO_J.htm)                                                                                                                                                                                    | Age, Sex, Education, Race/ethnicity, Marital status, Annual household income, County of birth, Survey cycle year                                              |
-|            | (*behaviour*) [SMQ](https://wwwn.cdc.gov/Nchs/Nhanes/2017-2018/SMQ_J.htm), [PAQ](https://wwwn.cdc.gov/nchs/nhanes/2017-2018/PAQ_J.htm), [SLQ](https://wwwn.cdc.gov/Nchs/Nhanes/2017-2018/SLQ_J.htm), [DBQ](https://wwwn.cdc.gov/Nchs/Nhanes/2017-2018/DBQ_J.htm) | Smoking[^data-2], Vigorous work activity, Sleep[^data-3], Diet[^data-4]                                                                                       |
-|            | (*health history / access*) [DIQ](https://wwwn.cdc.gov/nchs/nhanes/2017-2018/DIQ_J.htm), [HUQ](https://wwwn.cdc.gov/Nchs/Nhanes/2017-2018/HUQ_J.htm)                                                                                                             | Diabetes family history, Access to care[^data-5]                                                                                                              |
-|            | (*lab*) [BPX](https://wwwn.cdc.gov/nchs/nhanes/2017-2018/BPX_J.htm), [BPQ](https://wwwn.cdc.gov/Nchs/Nhanes/2017-2018/BPQ_J.htm), [BIOPRO](https://wwwn.cdc.gov/nchs/nhanes/2017-2018/BIOPRO_J.htm)                                                              | Blood pressure (systolic, diastolic[^data-6]), Cholesterol, Uric acid, Total Protein, Total Bilirubin, Phosphorus, Sodium, Potassium, Globulin, Total Calcium |
-
-[^data-1]: combination of (a) Doctor told you have diabetes, (b) Taking insulin now, (c) Take diabetic pills to lower blood sugar.
-
-[^data-2]: cigarette use (at least 100 cigarettes in life)
-
-[^data-3]: Sleep hours/workdays
-
-[^data-4]: How healthy is the diet
-
-[^data-5]: Routine place to go for healthcare
-
-[^data-6]: average of 4 measurements
-
-::: column-margin
--   14 demographic, behavioral, health history related variables
-    -   Mostly **categorical**
--   11 lab variables
-    -   Mostly **continuous**
-:::
-
-## Analytic data
-
-<mark>3 cycles of NHANES datasets were merged:</mark>
-
-```{mermaid}
-flowchart LR
-  A[NHANES] --> C1(2013-2014 cycle) --> ss1(10,175 \nparticipants)
-  A --> C2(2015-2016 cycle) --> ss2(9,971 \nparticipants)
-  A --> C3(2017-2018 cycle) --> ss3(9,254 \nparticipants)
-  ss1 --> ss(7,585 \nafter \nimposing \neligibility \ncriteria)
-  ss2 --> ss
-  ss3 --> ss
-  style A fill:#FFA500;
-  style C1 fill:#FFA500;
-  style C2 fill:#FFA500;
-  style C3 fill:#FFA500;
-  style ss1 fill:#FFA500;
-  style ss2 fill:#FFA500;
-  style ss3 fill:#FFA500;
-  style ss fill:#FFA500;
-```
-
-::: column-margin
-Our study population was restricted to the U.S. population who were
-
--   20 years or older and
--   not pregnant at the time of survey data collection, and
--   who had available International Classification of Diseases (ICD) codes to ensure we can extract sufficient proxy information for the analysis (discussed next page).
-:::
