--- a/references.bib
+++ b/references.bib
@@ -1,506 +1,112 @@
-@article{franklin2014plasmode,
-  title={Plasmode simulation for the evaluation of pharmacoepidemiologic methods in complex healthcare databases},
-  author={Franklin, Jessica M and Schneeweiss, Sebastian and Polinski, Jennifer M and Rassen, Jeremy A},
-  journal={Computational statistics \& data analysis},
-  volume={72},
-  pages={219--226},
-  year={2014},
-  publisher={Elsevier}
+@article{NEWTON200329,
+title = {Systematic review of yield responses of four North American conifers to forest tree improvement practices},
+journal = {Forest Ecology and Management},
+volume = {172},
+number = {1},
+pages = {29-51},
+year = {2003},
+issn = {0378-1127},
+doi = {https://doi.org/10.1016/S0378-1127(02)00327-4},
+url = {https://www.sciencedirect.com/science/article/pii/S0378112702003274},
+author = {Peter F Newton},
+keywords = {Black spruce, Jack pine, White spruce, Red pine, Correct provenance-progeny selection, First and second generational selection, Juvenile height growth response, Rotational yield consequences},
+abstract = {The objective of this review was to summarize the expected yield gains of black spruce (Picea mariana (Mill.) B.S.P.), jack pine (Pinus banksiana Lamb.), white spruce (Picea glauca (Moench) Voss) and red pine (Pinus resinosa Ait.), to correct provenance-progeny selection, first generational selection strategies and second generational selection strategies, based on a systematic assessment of the scientific literature. The procedure consisted of four sequential steps: (1) searching electronic databases for relevant forest tree improvement studies employing a meta-analytical protocol; (2) attaining and assessing the identified publications for their specific applicability; (3) collating the results of the resultant study subset in terms of relative height growth gains; and (4) estimating rotational consequences in terms of merchantable productivity via prediction models. The results of the systematic search indicated that documented long-term yield responses to tree improvement were paucity in nature. Specifically, the majority of the published studies consisted of short-term results pertaining to provenance-progeny experiments. Furthermore, studies reporting yield responses to first and second generational selection strategies were practically non-existent. Consequently, expert opinion and unpublished preliminary results derived from ongoing tree improvement experiments were used to augment the limited published information available for these selection strategies. Overall, the results indicated that correct provenance-progeny selection could yield juvenile height growth gains of approximately 15% at 15 years for black spruce, 7% at 21 years for jack pine, 12% at 20 years for white spruce and 8% at 15 years for red pine. Corresponding merchantable productivity (mean annual merchantable volume increment) gains at rotation (50 years) for plantations established at nominal initial densities on medium-to-good quality sites were approximately 17, 15, 26 and 7%, respectively. Preliminary estimates derived from individual case-studies indicated that (1) first generational selection strategies could increase merchantable productivity by approximately 13% at 50 years for black spruce, 28% at 40 years for jack pine, and 20% at 45 years for white spruce, and (2) second generational selection strategies could increase merchantable productivity by approximately 31% at 50 years for black spruce.}
 }
 
-@article{firth1993bias,
-  title={Bias reduction of maximum likelihood estimates},
-  author={Firth, David},
-  journal={Biometrika},
-  volume={80},
-  number={1},
-  pages={27--38},
-  year={1993},
-  publisher={Oxford University Press}
+@article{10.1093/forestscience/30.4.1059,
+    author = {Pienaar, Leon V. and Shiver, Barry D.},
+    title = "{The Effect of Planting Density on Dominant Height in Unthinned Slash Pine Plantations}",
+    journal = {Forest Science},
+    volume = {30},
+    number = {4},
+    pages = {1059-1066},
+    year = {1984},
+    month = {12},
+    abstract = "{The Chapman-Richards growth model was selected from several alternatives to describe the development of average dominant height in 36-year-old unthinned slash pine (Pinus elliottii Engelm.) plots planted at different initial densities in South Africa. Tests were made to determine the extent to which estimates of the model parameters were affected by differences in planting density ranging from 150 to 1,200 per acre at each of two forests. Results indicated no consistent relationship between any of the estimated parameters and planting density at either of the two forests. Differences such as did exist between individual height-age curves at a given location were ascribed to minor site quality differences rather than differences in planting density. The shape of the curves at the two locations was judged to be sufficiently similar for the development of an anamorphic site index equation. Forest Sci. 30:1059-1066.}",
+    issn = {0015-749X},
+    doi = {10.1093/forestscience/30.4.1059},
+    url = {https://doi.org/10.1093/forestscience/30.4.1059},
+    eprint = {https://academic.oup.com/forestscience/article-pdf/30/4/1059/22621934/forestscience1059.pdf},
 }
 
-@article{austin2015moving,
-  title={Moving towards best practice when using inverse probability of treatment weighting (IPTW) using the propensity score to estimate causal treatment effects in observational studies},
-  author={Austin, Peter C and Stuart, Elizabeth A},
-  journal={Statistics in medicine},
-  volume={34},
-  number={28},
-  pages={3661--3679},
-  year={2015},
-  publisher={Wiley Online Library}
+@misc{quebec1996,
+author = {Beaulieu, J.},
+year={1996},
+
+title={Breeding program and strategy for white spruce in Quebec},
+
+abstract={This information report presents the strategy for the genetic improvement of white spruce (Picea glauca [Moench] Voss) set up in Quebec by the Canadian Forest Service. A brief overview of the land ownership in Quebec and of the context in which the breeding program was initiated and developed is set out. Furthermore, from the report, one can see that the breeding strategy is based on material developed and genetic information acquired over many decades. As the Canadian Forest Service moves away from the management of the white spruce breeding program, this report will be essential for technology transfer.  Ce rapport d'information présente la stratégie d'amélioration génétique de l'épinette blanche (Picea glauca [Moench] Voss) mise en place au Québec par le Service canadien des forêts. On y fait un bref survol du régime de propriété existant au Québec et du contexte dans lequel le programme d'amélioration a été initié et poursuivi. De plus, on pourra constater au cours de la lecture de ce rapport que la stratégie d'amélioration s'appuie sur du matériel génétique divers et sur des connaissances de la génétique de l'espèce acquises au cours de plusieurs décennies. Le Service canadien des forêts délaissant la direction du programme d'amélioration, ce document se veut aussi un moyen privilégié de transfert de technologie.},
+
+keywords={Genetics, Tree Improvement, and Biodiversity; Génétique, amélioration des arbres et biodiversité},
+
+isbn={0835-1570},
+
+language={English},
+
 }
 
+@book{zobel1984,
 
-@article{benasseur2022comparison,
-  title={A comparison of confounder selection and adjustment methods for estimating causal effects using large healthcare databases},
-  author={Benasseur, Imane and Talbot, Denis and Durand, Madeleine and Holbrook, Anne and Matteau, Alexis and Potter, Brian J and Renoux, Christel and Schnitzer, Mireille E and Tarride, Jean-{\'E}ric and Guertin, Jason R},
-  journal={Pharmacoepidemiology and Drug Safety},
-  volume={31},
-  number={4},
-  pages={424--433},
-  year={2022},
-  publisher={Wiley Online Library}
+author={Zobel,Bruce and Talbert,John},
+
+year={1984},
+
+title={Applied forest tree improvement},
+
+publisher={Wiley},
+
+address={New York},
+
+keywords={Breeding; Forest genetics; Trees},
+
+isbn={9780471096825;0471096822;},
+
+language={English},
+
 }
 
-@article{tian2018evaluating,
-  title={Evaluating large-scale propensity score performance through real-world and synthetic data experiments},
-  author={Tian, Yuxi and Schuemie, Martijn J and Suchard, Marc A},
-  journal={International journal of epidemiology},
-  volume={47},
-  number={6},
-  pages={2005--2014},
-  year={2018},
-  publisher={Oxford University Press}
+@book{demont2016,
+
+author={De Montigny,Louise and Ahmed,Suborna and LeMay,Valerie M. and British Columbia Government EBook Collection and British Columbia. Ministry of Forests, Lands and Natural Resource Operations},
+
+year={2016},
+
+title={The effects of planting density on the growth and yield of Lodgepole pine, interior spruce, Interior Douglas-fir, and western larch: 16- to 26-year results from EP964},
+
+publisher={Province of British Columbia},
+
+address={Victoria, B.C},
+
+volume={98;98.;},
+
+keywords={Douglas fir; Growth; Lodgepole pine; Spacing; Spruce; Western larch},
+
+language={English},
+
 }
 
-@article{franklin2015regularized,
-  title={Regularized regression versus the high-dimensional propensity score for confounding adjustment in secondary database analyses},
-  author={Franklin, Jessica M and Eddings, Wesley and Glynn, Robert J and Schneeweiss, Sebastian},
-  journal={American journal of epidemiology},
-  volume={182},
-  number={7},
-  pages={651--659},
-  year={2015},
-  publisher={Oxford University Press}
-}
+@article{ahmed2020,
 
-@article{pang2016targeted,
-  title={Targeted maximum likelihood estimation for pharmacoepidemiologic research},
-  author={Pang, Menglan and Schuster, Tibor and Filion, Kristian B and Eberg, Maria and Platt, Robert W},
-  journal={Epidemiology (Cambridge, Mass.)},
-  volume={27},
-  number={4},
-  pages={570},
-  year={2016},
-  publisher={Wolters Kluwer Health}
-}
+author={Ahmed,Suborna and LeMay,Valerie and Yanchuk,Alvin and Robinson,Andrew and Marshall,Peter and Bull,Gary},
 
-@article{pang2016effect,
-  title={Effect estimation in point-exposure studies with binary outcomes and high-dimensional covariate data--a comparison of targeted maximum likelihood estimation and inverse probability of treatment weighting},
-  author={Pang, Menglan and Schuster, Tibor and Filion, Kristian B and Schnitzer, Mireille E and Eberg, Maria and Platt, Robert W},
-  journal={The international journal of biostatistics},
-  volume={12},
-  number={2},
-  year={2016},
-  publisher={De Gruyter}
-}
+year={2020},
 
-@article{ju2019propensity,
-  title={Propensity score prediction for electronic healthcare databases using super learner and high-dimensional propensity score methods},
-  author={Ju, Cheng and Combs, Mary and Lendle, Samuel D and Franklin, Jessica M and Wyss, Richard and Schneeweiss, Sebastian and van der Laan, Mark J},
-  journal={Journal of Applied Statistics},
-  volume={46},
-  number={12},
-  pages={2216--2236},
-  year={2019},
-  publisher={Taylor \& Francis}
-}
+title={Meta-Modelling to Quantify Yields of White Spruce and Hybrid Spruce Provenances in the Canadian Boreal Forest},
 
-@article{ju2019scalable,
-  title={Scalable collaborative targeted learning for high-dimensional data},
-  author={Ju, Cheng and Gruber, Susan and Lendle, Samuel D and Chambaz, Antoine and Franklin, Jessica M and Wyss, Richard and Schneeweiss, Sebastian and van Der Laan, Mark J},
-  journal={Statistical methods in medical research},
-  volume={28},
-  number={2},
-  pages={532--554},
-  year={2019},
-  publisher={SAGE Publications Sage UK: London, England}
-}
+journal={Forests},
 
-@article{neugebauer2015high,
-  title={High-dimensional propensity score algorithm in comparative effectiveness research with time-varying interventions},
-  author={Neugebauer, Romain and Schmittdiel, Julie A and Zhu, Zheng and Rassen, Jeremy A and Seeger, John D and Schneeweiss, Sebastian},
-  journal={Statistics in medicine},
-  volume={34},
-  number={5},
-  pages={753--781},
-  year={2015},
-  publisher={Wiley Online Library}
-}
+volume={11},
 
-@article{schuster2016propensity,
-  title={Propensity score model overfitting led to inflated variance of estimated odds ratios},
-  author={Schuster, Tibor and Lowe, Wilfrid Kouokam and Platt, Robert W},
-  journal={Journal of clinical epidemiology},
-  volume={80},
-  pages={97--106},
-  year={2016},
-  publisher={Elsevier}
-}
+number={6},
 
-@article{tazare2022transparency,
-  title={Transparency of high-dimensional propensity score analyses: guidance for diagnostics and reporting},
-  author={Tazare, John and Wyss, Richard and Franklin, Jessica M and Smeeth, Liam and Evans, Stephen JW and Wang, Shirley V and Schneeweiss, Sebastian and Douglas, Ian J and Gagne, Joshua J and Williamson, Elizabeth J},
-  journal={Pharmacoepidemiology and Drug Safety},
-  volume={31},
-  number={4},
-  pages={411--423},
-  year={2022},
-  publisher={Wiley Online Library}
-}
+pages={609},
 
-@article{rassen2023high,
-  title={High-dimensional propensity scores for empirical covariate selection in secondary database studies: Planning, implementation, and reporting},
-  author={Rassen, Jeremy A and Blin, Patrick and Kloss, Sebastian and Neugebauer, Romain S and Platt, Robert W and Potteg{\aa}rd, Anton and Schneeweiss, Sebastian and Toh, Sengwee},
-  journal={Pharmacoepidemiology and Drug Safety},
-  volume={32},
-  number={2},
-  pages={93--106},
-  year={2023},
-  publisher={Wiley Online Library}
-}
+abstract={Tree improvement programs can improve forest management by increasing timber yields in some areas, thereby facilitating conservation of other forest lands. In this study, we used a meta-analytic approach to quantify yields of alternative white (Picea glauca (Moench) Voss) and hybrid spruce (Picea engelmannii Parry ex Engelmann x Picea glauca (Moench) Voss) stocks across planting sites in the boreal and hemiboreal forests of Canada. We extracted meta-data from published tree improvement program results for five Canadian provinces covering 38 planting sites and 330 white and hybrid spruce provenances. Using these meta-data and a random-coefficients nonlinear mixed-effects modelling approach, we modelled average height over time trajectories for varying planting site characteristics, as well as climate transfer distances between planting sites and provenances. Climatic transfer distances had strong effects on the height trajectory parameters. In particular, the asymptote parameter had a nonlinear increasing trend with planting site versus provenance mean annual temperature differences. We incorporated the height trajectory meta-analysis model into an existing growth and yield model to predict volume yields. Overall, this research provides a mechanism to quantify yields of alternative provenances at a particular planting site, as a component of decision support models for evaluating evaluate forest management investment into improved planting stocks alternatives under current and possible future climates.},
 
-@article{wyss2018using,
-  title={Using super learner prediction modeling to improve high-dimensional propensity score estimation},
-  author={Wyss, Richard and Schneeweiss, Sebastian and Van Der Laan, Mark and Lendle, Samuel D and Ju, Cheng and Franklin, Jessica M},
-  journal={Epidemiology},
-  volume={29},
-  number={1},
-  pages={96--106},
-  year={2018},
-  publisher={Wolters Kluwer}
-}
+keywords={climatic transfer distances; growth and yield; meta-model; random-coefficients modelling; tree improvement},
 
-@article{zivich2021machine,
-  title={Machine learning for causal inference: on the use of cross-fit estimators},
-  author={Zivich, Paul N and Breskin, Alexander},
-  journal={Epidemiology (Cambridge, Mass.)},
-  volume={32},
-  number={3},
-  pages={393},
-  year={2021},
-  publisher={NIH Public Access}
-}
+isbn={1999-4907},
 
-@article{balzer2021demystifying,
-  title={Demystifying statistical inference when using machine learning in causal research},
-  author={Balzer, Laura B and Westling, Ted},
-  journal={American Journal of Epidemiology},
-  year={2021},
-  doi ={10.1093/aje/kwab200}
-}
+language={English},
 
-@article{naimi2017challenges,
-  title={Challenges in obtaining valid causal effect estimates with machine learning algorithms},
-  author={Naimi, Ashley I and Mishler, Alan E and Kennedy, Edward H},
-  journal={American Journal of Epidemiology},
-  year={2021},
-  doi={10.1093/aje/kwab201}
-}
-
-@article{Phillips2021,
-  title={Practical considerations for specifying a super learner},
-  author={Phillips, Rachael V and van der Laan, Mark J and Lee, Hana and Gruber, Susan},
-  journal={International Journal of Epidemiology},
-  year={2023},
-  doi={10.1093/ije/dyad023}
-}
-
-
-
-@article{wyss2022machine,
-  title={Machine learning for improving high-dimensional proxy confounder adjustment in healthcare database studies: An overview of the current literature},
-  author={Wyss, Richard and Yanover, Chen and El-Hay, Tal and Bennett, Dimitri and Platt, Robert W and Zullo, Andrew R and Sari, Grammati and Wen, Xuerong and Ye, Yizhou and Yuan, Hongbo and others},
-  journal={Pharmacoepidemiology and Drug Safety},
-  volume={31},
-  number={9},
-  pages={932--943},
-  year={2022},
-  publisher={Wiley Online Library}
-}
-
-@article{karim2018can,
-  title={Can we train machine learning methods to outperform the high-dimensional propensity score algorithm?},
-  author={Karim, Mohammad Ehsanul and Pang, Menglan and Platt, Robert W},
-  journal={Epidemiology},
-  volume={29},
-  number={2},
-  pages={191--198},
-  year={2018},
-  publisher={Wolters Kluwer}
-}
-
-@article{klein2022does,
-  title={Why does obesity cause diabetes?},
-  author={Klein, Samuel and Gastaldelli, Amalia and Yki-J{\"a}rvinen, Hannele and Scherer, Philipp E},
-  journal={Cell metabolism},
-  volume={34},
-  number={1},
-  pages={11--20},
-  year={2022},
-  publisher={Elsevier}
-}
-
-@article{von1992chronic,
-  title={A chronic disease score from automated pharmacy data},
-  author={Von Korff, Michael and Wagner, Edward H and Saunders, Kathleen},
-  journal={Journal of clinical epidemiology},
-  volume={45},
-  number={2},
-  pages={197--203},
-  year={1992},
-  publisher={Elsevier}
-}
-
-@article{elixhauser1998comorbidity,
-  title={Comorbidity measures for use with administrative data},
-  author={Elixhauser, Anne and Steiner, Claudia and Harris, D Robert and Coffey, Rosanna M},
-  journal={Medical care},
-  pages={8--27},
-  year={1998},
-  publisher={JSTOR}
-}
-
-@article{charlson1987new,
-  title={A new method of classifying prognostic comorbidity in longitudinal studies: development and validation},
-  author={Charlson, Mary E and Pompei, Peter and Ales, Kathy L and MacKenzie, C Ronald},
-  journal={Journal of chronic diseases},
-  volume={40},
-  number={5},
-  pages={373--383},
-  year={1987},
-  publisher={Elsevier}
-}
-
-
-@article{choi2001risk,
-  title={Risk factors for diabetes mellitus by age and sex: results of the National Population Health Survey},
-  author={Choi, BCK and Shi, F},
-  journal={Diabetologia},
-  volume={44},
-  pages={1221--1231},
-  year={2001},
-  publisher={Springer}
-}
-
-@article{schneeweiss2009high,
-  title={High-dimensional propensity score adjustment in studies of treatment effects using health care claims data},
-  author={Schneeweiss, Sebastian and Rassen, Jeremy A and Glynn, Robert J and Avorn, Jerry and Mogun, Helen and Brookhart, M Alan},
-  journal={Epidemiology (Cambridge, Mass.)},
-  volume={20},
-  number={4},
-  pages={512},
-  year={2009},
-  publisher={NIH Public Access}
-}
-
-@article{schneeweiss2006sensitivity,
-  title={Sensitivity analysis and external adjustment for unmeasured confounders in epidemiologic database studies of therapeutics},
-  author={Schneeweiss, Sebastian},
-  journal={Pharmacoepidemiology and drug safety},
-  volume={15},
-  number={5},
-  pages={291--303},
-  year={2006},
-  publisher={Wiley Online Library}
-}
-
-@article{stuart2013prognostic,
-  title={Prognostic score--based balance measures can be a useful diagnostic for propensity score methods in comparative effectiveness research},
-  author={Stuart, Elizabeth A and Lee, Brian K and Leacy, Finbarr P},
-  journal={Journal of clinical epidemiology},
-  volume={66},
-  number={8},
-  pages={S84--S90},
-  year={2013},
-  publisher={Elsevier}
-}
-
-@article{bross1966spurious,
-  title={Spurious effects from an extraneous variable},
-  author={Bross, Irwin DJ},
-  journal={Journal of chronic diseases},
-  volume={19},
-  number={6},
-  pages={637--647},
-  year={1966},
-  publisher={Elsevier}
-}
-
-@Manual{autoCovariateSelection,
-  title = {autoCovariateSelection: Automatic Covariate Selection},
-  author = {Robert, Dennis},
-  year = {2020},
-  note = {R package version 1.0.0},
-  url = {https://CRAN.R-project.org/package=autoCovariateSelection},
-}
-
-
-@article{schuster2015role,
-  title={On the role of marginal confounder prevalence--implications for the high-dimensional propensity score algorithm},
-  author={Schuster, Tibor and Pang, Menglan and Platt, Robert W},
-  journal={Pharmacoepidemiology and drug safety},
-  volume={24},
-  number={9},
-  pages={1004--1007},
-  year={2015},
-  publisher={Wiley Online Library}
-}
-
-@article{connolly2019quantifying,
-  title={Quantifying bias reduction with fixed-duration versus all-available covariate assessment periods},
-  author={Connolly, John G and Schneeweiss, Sebastian and Glynn, Robert J and Gagne, Joshua J},
-  journal={Pharmacoepidemiology and drug safety},
-  volume={28},
-  number={5},
-  pages={665--670},
-  year={2019},
-  publisher={Wiley Online Library}
-}
-
-@article{low2016comparing,
-  title={Comparing high-dimensional confounder control methods for rapid cohort studies from electronic health records},
-  author={Low, Yen Sia and Gallego, Blanca and Shah, Nigam Haresh},
-  journal={Journal of comparative effectiveness research},
-  volume={5},
-  number={2},
-  pages={179--192},
-  year={2016},
-  publisher={Future Medicine}
-}
-
-@article{weberpals2021deep,
-  title={Deep learning-based propensity scores for confounding control in comparative effectiveness research: A large-scale, real-world data study},
-  author={Weberpals, Janick and Becker, Tim and Davies, Jessica and Schmich, Fabian and R{\"u}ttinger, Dominik and Theis, Fabian J and Bauer-Mehren, Anna},
-  journal={Epidemiology},
-  volume={32},
-  number={3},
-  pages={378--388},
-  year={2021},
-  publisher={LWW}
-}
-
-@article{schneeweiss2017variable,
-  title={Variable selection for confounding adjustment in high-dimensional covariate spaces when analyzing healthcare databases},
-  author={Schneeweiss, Sebastian and Eddings, Wesley and Glynn, Robert J and Patorno, Elisabetta and Rassen, Jeremy and Franklin, Jessica M},
-  journal={Epidemiology},
-  volume={28},
-  number={2},
-  pages={237--248},
-  year={2017},
-  publisher={Wolters Kluwer}
-}
-
-@article{schneeweiss2018automated,
-  title={Automated data-adaptive analytics for electronic healthcare data to study causal treatment effects},
-  author={Schneeweiss, Sebastian},
-  journal={Clinical epidemiology},
-  pages={771--788},
-  year={2018},
-  publisher={Taylor \& Francis}
-}
-
-@article{schneeweiss2000use,
-  title={Use of comorbidity scores for control of confounding in studies using administrative databases},
-  author={Schneeweiss, Sebastian and Maclure, Malcolm},
-  journal={International journal of epidemiology},
-  volume={29},
-  number={5},
-  pages={891--898},
-  year={2000},
-  publisher={Oxford University Press}
-}
-
-@article{vanderweele2019principles,
-  title={Principles of confounder selection},
-  author={VanderWeele, Tyler J},
-  journal={European journal of epidemiology},
-  volume={34},
-  pages={211--219},
-  year={2019},
-  publisher={Springer}
-}
-
-@article{lix2013predictive,
-  title={Predictive performance of comorbidity measures in administrative databases for diabetes cohorts},
-  author={Lix, Lisa M and Quail, Jacqueline and Fadahunsi, Opeyemi and Teare, Gary F},
-  journal={BMC Health Services Research},
-  volume={13},
-  pages={1--12},
-  year={2013},
-  publisher={Springer}
-}
-
-@article{lix2011performance,
-  title={Performance of comorbidity measures for predicting outcomes in population-based osteoporosis cohorts},
-  author={Lix, LM and Quail, J and Teare, G and Acan, B},
-  journal={Osteoporosis international},
-  volume={22},
-  pages={2633--2643},
-  year={2011},
-  publisher={Springer}
-}
-
-@article{greenland1999causal,
-  title={Causal diagrams for epidemiologic research},
-  author={Greenland, Sander and Pearl, Judea and Robins, James M},
-  journal={Epidemiology},
-  pages={37--48},
-  year={1999},
-  publisher={JSTOR}
-}
-
-@article{nhanes,
-  title={National Health and Nutrition Examination Survey (NHANES)},
-  author={Centers for Disease Control and Prevention},
-  journal={National Center for Health Statistics},
-  year={2021},
-  howpublished = {\url{https://www.cdc.gov/nchs/nhanes/index.htm}},
-  note = {Accessed: April 20, 2023}
-}
-
-
-@article{li2013propensity,
-  title={Propensity score weighting with multilevel data},
-  author={Li, Fan and Zaslavsky, Alan M and Landrum, Mary Beth},
-  journal={Statistics in medicine},
-  volume={32},
-  number={19},
-  pages={3373--3387},
-  year={2013},
-  publisher={Wiley Online Library}
-}
-
-@article{dugoff2014generalizing,
-  title={Generalizing observational study results: applying propensity score methods to complex surveys},
-  author={DuGoff, Eva H and Schuler, Megan and Stuart, Elizabeth A},
-  journal={Health services research},
-  volume={49},
-  number={1},
-  pages={284--303},
-  year={2014},
-  publisher={Wiley Online Library}
-}
-
-@article{austin2018propensity,
-  title={Propensity score matching and complex surveys},
-  author={Austin, Peter C and Jembere, Nathaniel and Chiu, Maria},
-  journal={Statistical methods in medical research},
-  volume={27},
-  number={4},
-  pages={1240--1257},
-  year={2018},
-  publisher={SAGE Publications Sage UK: London, England}
-}
-
-@article{zeng2021propensity,
-  title={Propensity score weighting for covariate adjustment in randomized clinical trials},
-  author={Zeng, Shuxi and Li, Fan and Wang, Rui and Li, Fan},
-  journal={Statistics in medicine},
-  volume={40},
-  number={4},
-  pages={842--858},
-  year={2021},
-  publisher={Wiley Online Library}
-}
-
-@article{dong2020subgroup,
-  title={Subgroup balancing propensity score},
-  author={Dong, Jing and Zhang, Junni L and Zeng, Shuxi and Li, Fan},
-  journal={Statistical methods in medical research},
-  volume={29},
-  number={3},
-  pages={659--676},
-  year={2020},
-  publisher={SAGE Publications Sage UK: London, England}
 }
